--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -70,6 +70,13 @@
 					</div>
 				</div>
 			</div>
+			<div class="ad-in-video">
+				<div>
+					<div></div>
+					<div></div>
+				</div>
+				<div></div>
+			</div>
 		</section>
 
 		<!-- 영상 정보 -->
@@ -166,56 +173,7 @@
 							<button class="ok" type="submit">댓글</button>
 						</div>
 					</div>
-					<ul class="comments-list">
-						<li class="comments-item">
-							<div class="comment">
-								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-								<div class="comment-text">
-									<div id="channel-title">채널 이름</div>
-									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
-									<div id="comment-info"> 30분 전 • 
-										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
-										<a href="#"><i class="fas fa-thumbs-down"></i></a>
-										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
-									</div>
-								</div>
-								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-							</div>
-							<button class="open-reply">답글 더보기</button>
-						</li>
-						<li class="comments-item">
-							<div class="comment">
-								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-								<div class="comment-text">
-									<div id="channel-title">채널 이름</div>
-									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
-									<div id="comment-info"> 30분 전 • 
-										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
-										<a href="#"><i class="fas fa-thumbs-down"></i></a>
-										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
-									</div>
-								</div>
-								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-							</div>
-							<button class="open-reply">답글 더보기</button>
-						</li>
-						<li class="comments-item">
-							<div class="comment">
-								<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-								<div class="comment-text">
-									<div id="channel-title">채널 이름</div>
-									<div id="comment-content">이 곳에 댓글 내용이 적힙니다.</div>
-									<div id="comment-info"> 30분 전 • 
-										<a href="#"><i class="fas fa-thumbs-up"></i><span>123</span></a>
-										<a href="#"><i class="fas fa-thumbs-down"></i></a>
-										<a href="#"><i class="fas fa-comment-dots"></i><span>1</span></a>
-									</div>
-								</div>
-								<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-							</div>
-							<button class="open-reply">답글 더보기</button>
-						</li>
-					</ul>
+					<ul class="comments-list"></ul>
 				</div>
 			</div>
 		</aside>
@@ -223,56 +181,7 @@
 		<!-- 사이드바 -->
 		<aside class="next-video-section">
 			<h3>다음 동영상</h3>
-			<ul class="next-video-list">
-				<li class="next-video-item">
-					<div class="next-video-thumbnail"><img src="src/thumbnail1.jpg" alt="영상 보기"></div>
-					<div class="next-video-meta">
-						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-							<div class="title">
-								<div class="next-video-title">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-								</div>
-								<div class="channel-title">채널 이름 • 조회수 12만회</div>
-							</div>
-							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-						</div>
-					</div>
-				</li>
-				<li class="next-video-item">
-					<div class="next-video-thumbnail"><img src="src/thumbnail2.jpg" alt="영상 보기"></div>
-					<div class="next-video-meta">
-						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-							<div class="title">
-								<div class="next-video-title">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-								</div>
-								<div class="channel-title">채널 이름 • 조회수 12만회</div>
-							</div>
-							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-						</div>
-					</div>
-				</li>
-				<li class="next-video-item">
-					<div class="next-video-thumbnail"><img src="src/thumbnail3.jpg" alt="영상 보기"></div>
-					<div class="next-video-meta">
-						<div class="next-video-info">
-							<div class="next-video-channel-img"><img src="src/profile.png" alt="채널 이동"></div>
-							<div class="title">
-								<div class="next-video-title">
-									Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-									sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-								</div>
-								<div class="channel-title">채널 이름 • 조회수 12만회</div>
-							</div>
-							<a href="#"><i class="fas fa-ellipsis-v"></i></a>
-						</div>
-					</div>
-				</li>
-			</ul>
+			<ul class="next-video-list"></ul>
 		</aside>
 
 	</body>
