fix none progress in prev ad

--- a/clone-coding/youtube/index.html
+++ b/clone-coding/youtube/index.html
@@ -43,7 +43,7 @@
 			</div>
 			<div id="video-controls" class="controls" data-state="hidden">
 				<div class="controls-top">
-					<button id="backward"><i class="fas fa-cog"></i></button>
+					<button id="setting"><i class="fas fa-cog"></i></button>
 				</div>
 				<div class="controls-mid">
 					<button id="backward"><i class="fas fa-step-backward"></i></button>
