feat: controls click event with delegation

--- a/youtube/index.html
+++ b/youtube/index.html
@@ -42,20 +42,20 @@
 				<span>탭하여 음소거 해제</span>
 			</div>
 			<div id="video-controls" class="controls" data-state="hidden">
-				<div class="controls-top">
-					<button id="setting"><i class="fas fa-cog"></i></button>
+				<div class="controls controls-top">
+					<button class="controls-btn" id="setting"><i class="fas fa-cog"></i></button>
 				</div>
-				<div class="controls-mid">
-					<button id="backward"><i class="fas fa-step-backward"></i></button>
-					<button id="playpause" type="button" data-state="pause">
+				<div class="controls controls-mid">
+					<button class="controls-btn" id="backward"><i class="fas fa-step-backward"></i></button>
+					<button class="controls-btn" id="playpause" type="button" data-state="play">
 						<i class="fas fa-play" id="playbutton"></i>
 						<i class="fas fa-pause" id="pausebutton"></i>
 					</button>
-					<button id="forward"><i class="fas fa-step-forward"></i></button>
+					<button class="controls-btn" id="forward"><i class="fas fa-step-forward"></i></button>
 				</div>
-				<div class="controls-bottom">
+				<div class="controls controls-bottom">
 					<span id="playtime"><span id="currentT"></span><span id="duration"></span></span>
-					<button id="fs" type="button" data-state="unfullscreen">
+					<button class="controls-btn" id="fs" type="button" data-state="unfullscreen">
 						<i class="fas fa-expand" id="expand"></i><i class="fas fa-compress" id="compress"></i>
 					</button>
 				</div>
