--- a/youtube/index.html
+++ b/youtube/index.html
@@ -4,23 +4,23 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width:device-width">
-		<link rel="stylesheet" href="YouTube.css">
-		<link rel="stylesheet" href="video-controls.css">
-		<link rel="stylesheet" href="ad.css">
+		<link rel="stylesheet" href="/src/css/YouTube.css">
+		<link rel="stylesheet" href="/src/css/video-controls.css">
+		<link rel="stylesheet" href="/src/css/ad.css">
 		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css' integrity='sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==' crossorigin='anonymous'/>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-		<script src="YouTube.js" defer></script>
-		<script src="button_click.js" defer></script>
-		<script type="module" src="video-controls.js" defer></script>
-		<script type="module" src="playlist.js" defer></script>
-		<script type="module" src="ad.js" defer></script>
+		<script src="/src/js/YouTube.js" defer></script>
+		<script src="/src/js/button_click.js" defer></script>
+		<script type="module" src="/src/js/video-controls.js" defer></script>
+		<script type="module" src="/src/js/playlist.js" defer></script>
+		<script type="module" src="/src/js/ad.js" defer></script>
 		<title>YouTube</title>
 	</head>
 	<body data-fullscreen="false">
 		<!-- 헤더 -->
 		<header>
-			<a href=""><img src="src/yt_logo_rgb_dark.png" alt="YouTube 홈" class="logo"></a>
+			<a href=""><img src="/src/img/yt_logo_rgb_dark.png" alt="YouTube 홈" class="logo"></a>
 			<ul>
 				<li><a href=""><i class="fas fa-search"></i></a></li>
 				<li><a href=""><i class="fas fa-ellipsis-v"></i></a></li>
@@ -104,7 +104,7 @@
 			</ul>
 			<div class="channel-area">
 				<a href="" class="channel">
-					<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
+					<div class="channel-img"><img src="src/img/profile.png" alt="채널 이동"></div>
 					<div class="channel-info">
 						<div class="channel-title">SEW CODING</div>
 						<div class="channel-subscriber">구독자 123만명</div>
@@ -161,7 +161,7 @@
 				<div class="comments-body">
 					<div class="comments-add">
 						<div class="comments-input">
-							<div class="channel-img"><img src="src/profile.png" alt="채널 이동"></div>
+							<div class="channel-img"><img src="src/img/profile.png" alt="채널 이동"></div>
 							<div class="simple-textarea">
 								공개 댓글 추가…
 							</div>
